--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid sticky-top">
     <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" [routerLink]="['/clientes']">
-            Logística
+            Rota Fácil
         </a>
         <button class="navbar-toggler" (click)="showCollapse()" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
           <i class="bi bi-list"></i>
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse justify-content-end" [ngClass]="{'show':show}" id="navbarToggler">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/clientes']">Clientes</a>
+                <a class="nav-link" [routerLink]="['/clientes']" routerLinkActive="active-link">Clientes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/cadastro']">Cadastro</a>
+                <a class="nav-link" [routerLink]="['/cadastro']" routerLinkActive="active-link">Cadastro</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/mapa-clientes']">Mapa de clientes</a>
+              <a class="nav-link" [routerLink]="['/mapa-clientes']" routerLinkActive="active-link">Mapa de clientes</a>
             </li>
           </ul>
         </div>
