--- a/frontend/src/app/pages/clientes/clientes.component.css
+++ b/frontend/src/app/pages/clientes/clientes.component.css
@@ -30,12 +30,12 @@ p {
 
 .button-vermelho {
     background-color: #ce7981;
-    color: #611e24;
+    color: #580d13;
 }
 
 .button-amarelo {
     background-color: #ff9800;
-    color: #FF4500;
+    color: #ff2600;
 }
 
 .button-filtro {
