--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,24 +1,26 @@
-<div class="container-fluid sticky-top">
+<div class="background sticky-top">
+  <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" [routerLink]="['/clientes']">
-            Rota Fácil
-        </a>
-        <button class="navbar-toggler" (click)="showCollapse()" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="bi bi-list"></i>
-        </button>
-    
-        <div class="collapse navbar-collapse justify-content-end" [ngClass]="{'show':show}" id="navbarToggler">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/clientes']" routerLinkActive="active-link">Clientes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/cadastro']" routerLinkActive="active-link">Cadastro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/mapa-clientes']" routerLinkActive="active-link">Mapa de clientes</a>
-            </li>
-          </ul>
-        </div>
+      <a class="navbar-brand" [routerLink]="['/clientes']">
+          Rota Fácil
+      </a>
+      <button class="navbar-toggler" (click)="showCollapse()" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="bi bi-list"></i>
+      </button>
+  
+      <div class="collapse navbar-collapse justify-content-end" [ngClass]="{'show':show}" id="navbarToggler">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/clientes']" routerLinkActive="active-link">Clientes <i class="bi bi-person-lines-fill"></i></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/cadastro']" routerLinkActive="active-link">Cadastro <i class="bi bi-person-fill-add"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/mapa-clientes']" routerLinkActive="active-link">Mapa de clientes <i class="bi bi-globe-americas"></i></a>
+          </li>
+        </ul>
+      </div>
     </nav>
+  </div>
 </div>
