--- a/frontend/src/app/pages/cadastro/cadastro.component.css
+++ b/frontend/src/app/pages/cadastro/cadastro.component.css
@@ -3,3 +3,9 @@
     justify-content: center;
     align-items: center;
 }
+
+input[type="submit"] {
+    font-size: 1.5em;
+    width: 40%;
+    margin: 10px auto 0 auto;
+}
