--- a/frontend/src/app/pages/mapa-clientes/mapa-clientes.component.html
+++ b/frontend/src/app/pages/mapa-clientes/mapa-clientes.component.html
@@ -18,10 +18,11 @@
     </div>
     <p *ngIf="totalElements <= 0 && !isBlank(filtro)" class="text-green text-center negrito">Ops! Nenhum cliente encontrado</p>
 
-    <div class="center mt-3">
+    <div class="mt-3">
         <google-map
         [center]="center"
-        [zoom]="4">
+        [zoom]="4"
+        width="100%">
         <map-marker *ngFor="let marker of markers"
             [position]="marker.position"
             [label]="marker.label"
