--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,6 +2,11 @@
 
 /* You can add global styles to this file, and also import other style files */
 
+* {
+    font-family: Raleway, Nunito, sans-serif !important;
+    /* Add !important to overwrite all elements */
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
