--- a/frontend/src/app/pages/mapa-clientes/mapa-clientes.component.html
+++ b/frontend/src/app/pages/mapa-clientes/mapa-clientes.component.html
@@ -9,8 +9,8 @@
     <div *ngIf="totalElements > 0 || !isBlank(filtro)" class="row mb-2">
         <div class="col-md-6 d-flex align-items-start">
             <input type="text" placeholder="Filtrar endereço" [(ngModel)]="filtro" (ngModelChange)="onFiltroChange($event)">
-            <button *ngIf="!isBlank(filtro)" matTooltip="Buscar" class="button-filtro" (click)="buscarClick()"><i class="bi bi-search"></i></button>
-            <button *ngIf="!isBlank(filtro)" matTooltip="Limpar" class="button-filtro button-amarelo" (click)="limparFiltroClick()"><i class="bi bi-backspace"></i></button>
+            <button *ngIf="!isBlank(filtro)" matTooltip="Buscar" class="btn-filtro" (click)="buscarClick()"><i class="bi bi-search"></i></button>
+            <button *ngIf="!isBlank(filtro)" matTooltip="Limpar" class="btn-filtro btn-amarelo" (click)="limparFiltroClick()"><i class="bi bi-backspace"></i></button>
         </div>
         <div class="col-md-6 d-flex justify-content-end align-items-center">
             <button [routerLink]="['/cadastro']">Ir para cadastro <i class="bi bi-arrow-right"></i></button>
